# ShellStand

./: CMakeLists.txt  README.md
bayesian-optimization/include/sequential-line-search/: acquisition-function.hpp  current-best-selection-strategy.hpp  gaussian-process-regressor.hpp  kernel-type.hpp  preference-data-manager.hpp  preference-regressor.hpp  preference.hpp  preferential-bayesian-optimizer.hpp  regressor.hpp  sequential-line-search.hpp  slider.hpp  utils.hpp
bayesian-optimization/src/: acquisition-function.cpp  gaussian-process-regressor.cpp  preference-data-manager.cpp  preference-regressor.cpp  preferential-bayesian-optimizer.cpp  regressor.cpp  sequential-line-search.cpp  slider.cpp  utils.cpp
src/: BayesianOptimization.cpp  BayesianOptimization.h  Deformation.cpp  Deformation.h  Evaluation.cpp  Evaluation.h  MOSEKOptimize.cpp  MOSEKOptimize.h  ModelOperation.cpp  ModelOperation.h  Saliency.cpp  Saliency.h  SelfIntersect.cpp  SelfIntersect.h  ShellThickening.cpp  ShellThickening.h  ThickeningRange.cpp  ThickeningRange.h  Visibility.cpp  Visibility.h  config.yaml  main.cpp  maths_funcs.cpp  maths_funcs.h  universal.cpp  universal.h
